package edu.fiuba.algo3.modelo.exclusividad;

public interface Exclusividad {

    Exclusividad proximo();

    Integer multiplicar(int puntos);
}
